# discord-video-compressor

./: Cargo.toml  LICENSE  README.md
src/: main.rs
