[package]
name = "discord_video_compressor"
version = "0.1.0"
authors = ["polymetric <polymetricofficial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
